--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="array"></div>
     </div>
     <footer class="footer">
-      <p>Created with <i class="fa fa-heart"></i> by Tanya Modi</p>
+      <p>Created by Tanya Modi</p>
       <p>
         <a
           href="https://www.linkedin.com/in/tanya-modi-2776a6225/"
